--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <h4 class="hero-subtitle">Hello, I'm</h4>
                     </div>
                     <div class="text-reveal">
-                        <h1 class="hero-title">Ram Jeeva Sajan</h1>
+                        <h1 class="hero-title">Ram Jeeva Sajan I</h1>
                     </div>
                     <div class="text-reveal">
                         <h2 class="hero-role">
@@ -249,7 +249,6 @@
                         <div class="experience-skills">
                             <span class="skill-tag">Python</span>
                             <span class="skill-tag">Backend Development</span>
-                            <span class="skill-tag">Automation</span>
                             <span class="skill-tag">Problem Solving</span>
                         </div>
                     </div>
@@ -411,8 +410,8 @@
                             <h3>Salesforce Certified Agentforce Specialist</h3>
                             <h4>Salesforce</h4>
                             <div class="certification-meta">
-                                <span class="certification-date">Issued 2024</span>
-                                <span class="certification-id">Credential ID: SF-AGENT-2024</span>
+                                <span class="certification-date">Issued 2025</span>
+                                <span class="certification-id">Credential ID: 6854736</span>
                             </div>
                         </div>
                     </div>
@@ -442,7 +441,7 @@
                             <h3>Mission DSA: 160 Days of Mastery</h3>
                             <h4>GeeksforGeeks</h4>
                             <div class="certification-meta">
-                                <span class="certification-date">Completed 2024</span>
+                                <span class="certification-date">Completed 2025</span>
                                 <span class="certification-id">160-Day Challenge</span>
                             </div>
                         </div>
@@ -473,7 +472,7 @@
                             <h3>IDE Bootcamp</h3>
                             <h4>AICTE – Wadhwani Foundation</h4>
                             <div class="certification-meta">
-                                <span class="certification-date">Completed 2023</span>
+                                <span class="certification-date">Completed 2024</span>
                                 <span class="certification-id">5-Day Intensive</span>
                             </div>
                         </div>
@@ -547,14 +546,14 @@
                         <div class="achievement-badge">2nd Prize</div>
                     </div>
                     <div class="achievement-content">
-                        <h3>Hack A Cure 2024 - 24hrs Hackathon</h3>
+                        <h3>Hack A Cure 2025 - 24hrs Hackathon</h3>
                         <h4>VIT Chennai</h4>
                         <div class="achievement-meta">
                             <span class="achievement-date">2024</span>
                             <span class="achievement-category">Healthcare Technology</span>
                         </div>
                         <p class="achievement-description">
-                            Secured <strong>2nd Prize</strong> in a 24-hour hackathon organized by VIT Chennai, competing against 50+ teams from across India.
+                            Secured <strong>2nd Prize</strong> in a 24-hour hackathon organized by VIT Chennai, competing against 100+ teams from across India.
                         </p>
                         <div class="project-details">
                             <h5>Medical RAG Bot Project</h5>
@@ -595,7 +594,7 @@
                             <span class="tech-tag">DSA</span>
                             <span class="tech-tag">Algorithms</span>
                             <span class="tech-tag">Problem Solving</span>
-                            <span class="tech-tag">C++</span>
+                            <span class="tech-tag">Python</span>
                         </div>
                     </div>
                 </div>
