--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <h4 class="hero-subtitle">Hello, I'm</h4>
                     </div>
                     <div class="text-reveal">
-                        <h1 class="hero-title">Ram Jeeva Sajan I</h1>
+                        <h1 class="hero-title">Ram Jeeva Sajan</h1>
                     </div>
                     <div class="text-reveal">
                         <h2 class="hero-role">
